--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,12 @@
-
+{
+  "name": "bashencode/FFmpeg-PHP-Class",
+  "homepage": "https://github.com/bashencode/FFmpeg-PHP-Class",
+  "require": {
+    "php": ">=5.3.0"
+  },
+  "autoload": {
+    "psr-0": {
+      "FFmpeg": "src/"
+    }
+  }
+}
